updated main.py[skip ci]

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,12 @@
-# Database Configuration
-POSTGRES_USER=user
-POSTGRES_PASSWORD=pass
-POSTGRES_DB=appdb
-POSTGRES_HOST=localhost
-POSTGRES_PORT=5432
+# Database Configuration (Option 1: Use full DATABASE_URL - RECOMMENDED)
+DATABASE_URL=postgresql://username:password@your-db-host:5432/your-db-name
+
+# Database Configuration (Option 2: Use individual components)
+# POSTGRES_USER=user
+# POSTGRES_PASSWORD=pass
+# POSTGRES_DB=appdb
+# POSTGRES_HOST=your-db-host.com
+# POSTGRES_PORT=5432
 
 # Feature Flags (Optional)
 FEATURE_FLAG_URL=
