--- a/infra/Pulumi.yaml
+++ b/infra/Pulumi.yaml
@@ -1,3 +1,11 @@
-name: fastapi-infra
-runtime: python
-description: FastAPI infrastructure on AWS with Pulumi
+name: fastapi
+description: aws fastapi
+runtime:
+  name: python
+  options:
+    toolchain: pip
+    virtualenv: venv
+config:
+  pulumi:tags:
+    value:
+      pulumi:template: aws-python
