--- a/infra/Pulumi.yaml
+++ b/infra/Pulumi.yaml
@@ -1,5 +1,5 @@
-name: fastapi
-description: fastapi aws project
+name: fastapi-app
+description: FastAPI application infrastructure on AWS EKS
 runtime:
   name: python
   options:
@@ -9,3 +9,5 @@ config:
   pulumi:tags:
     value:
       pulumi:template: aws-python
+      project: fastapi-eks
+
