--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy to AWS EKS
+name: Deploy to AWS EC2
 
 on:
   workflow_run:
@@ -66,40 +66,44 @@ jobs:
       env:
         PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
     
-    - name: Configure kubectl
-      run: |
-        cd infra
-        pulumi stack output kubeconfig > kubeconfig.yaml
-        echo "KUBECONFIG=$PWD/kubeconfig.yaml" >> $GITHUB_ENV
-    
     - name: Run database migrations
       run: |
-        pip install alembic psycopg2-binary
+        pip install alembic psycopg2-binary sqlalchemy
         alembic upgrade head
       env:
         DATABASE_URL: ${{ secrets.DATABASE_URL }}
     
-    - name: Update Kubernetes deployment
+    - name: Get EC2 instance ID
+      id: get-instance
+      run: |
+        cd infra
+        INSTANCE_ID=$(pulumi stack output instance_id)
+        echo "instance_id=$INSTANCE_ID" >> $GITHUB_OUTPUT
+    
+    - name: Restart application on EC2
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
       run: |
-        # Update deployment manifest with ECR URL
-        sed -i "s|<ECR_REPOSITORY_URL>|$ECR_REGISTRY/$ECR_REPOSITORY|g" k8s/deployment.yaml
+        INSTANCE_ID=${{ steps.get-instance.outputs.instance_id }}
         
-        # Apply Kubernetes manifests
-        kubectl apply -f k8s/deployment.yaml
-        kubectl apply -f k8s/service.yaml
+        # Wait for instance to be ready
+        aws ec2 wait instance-status-ok --instance-ids $INSTANCE_ID --region ${{ env.AWS_REGION }}
         
-        # Restart deployment to pull new image
-        kubectl rollout restart deployment fastapi-deployment
-        
-        # Wait for rollout to complete
-        kubectl rollout status deployment fastapi-deployment
+        # Send command to pull latest image and restart container
+        aws ssm send-command \
+          --instance-ids $INSTANCE_ID \
+          --document-name "AWS-RunShellScript" \
+          --parameters 'commands=[
+            "aws ecr get-login-password --region ap-southeast-1 | docker login --username AWS --password-stdin $ECR_REGISTRY",
+            "docker pull $ECR_REGISTRY/$ECR_REPOSITORY:latest",
+            "docker stop fastapi-app || true",
+            "docker rm fastapi-app || true",
+            "docker run -d --name fastapi-app --restart unless-stopped -p 80:8000 -e DATABASE_URL=\"${{ secrets.DATABASE_URL }}\" $ECR_REGISTRY/$ECR_REPOSITORY:latest"
+          ]' \
+          --region ${{ env.AWS_REGION }}
     
     - name: Get deployment URL
       run: |
-        echo "🚀 Deployment Complete!"
-        echo "Getting Load Balancer URL..."
-        kubectl get service fastapi-service
-        echo ""
-        echo "Application will be available at the EXTERNAL-IP shown above (may take a few minutes to provision)"
+        cd infra
+        echo "Deployment Complete!"
+        echo "Application URL: $(pulumi stack output application_url)"
