--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,93 +1,107 @@
-name: CI Pipeline
+name: Deploy to AWS EC2
 
 on:
-  push:
-    branches: [ main, develop ]
-  pull_request:
-    branches: [ main ]
+  workflow_run:
+    workflows: ["CI Pipeline"]
+    types:
+      - completed
+    branches: [main]
+  workflow_dispatch:
+
+env:
+  AWS_REGION: ap-southeast-1
 
 jobs:
-  test:
+  deploy:
     runs-on: ubuntu-latest
-    
-    services:
-      postgres:
-        image: postgres:15
-        env:
-          POSTGRES_USER: user
-          POSTGRES_PASSWORD: pass
-          POSTGRES_DB: testdb
-        options: >-
-          --health-cmd pg_isready
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
-        ports:
-          - 5432:5432
+    if: ${{ github.event.workflow_run.conclusion == 'success' || github.event_name == 'workflow_dispatch' }}
     
     steps:
-    - uses: actions/checkout@v3
+    - name: Checkout code
+      uses: actions/checkout@v3
+    
+    - name: Login to Docker Hub
+      uses: docker/login-action@v3
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
+    
+    - name: Build and push Docker image
+      env:
+        DOCKER_IMAGE: ${{ secrets.DOCKERHUB_USERNAME }}/fastapi-app
+        IMAGE_TAG: ${{ github.sha }}
+      run: |
+        docker build -t $DOCKER_IMAGE:$IMAGE_TAG .
+        docker tag $DOCKER_IMAGE:$IMAGE_TAG $DOCKER_IMAGE:latest
+        docker push $DOCKER_IMAGE:$IMAGE_TAG
+        docker push $DOCKER_IMAGE:latest
     
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
         python-version: '3.11'
     
-    - name: Install dependencies
+    - name: Install Pulumi CLI
+      uses: pulumi/actions@v4
+    
+    - name: Install Pulumi dependencies
       run: |
-        python -m pip install --upgrade pip
-        pip install -r app/requirements.txt
-        pip install pytest-cov black flake8
+        cd infra
+        pip install -r requirements.txt
     
-    - name: Lint with flake8
+    - name: Configure Pulumi stack
       run: |
-        flake8 app --count --select=E9,F63,F7,F82 --show-source --statistics
-        flake8 app --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-    
-    - name: Format check with black
-      run: black --check app
-    
-    - name: Run tests
+        cd infra
+        pulumi login
+        pulumi stack select dev || pulumi stack init dev
+        pulumi config set docker_image ${{ secrets.DOCKERHUB_USERNAME }}/fastapi-app:latest
+        pulumi config set database_url ${{ secrets.DATABASE_URL }} --secret
       env:
-        POSTGRES_HOST: localhost
-        POSTGRES_USER: user
-        POSTGRES_PASSWORD: pass
-        POSTGRES_DB: testdb
-      run: |
-        pytest app/test_main.py -v --cov=app --cov-report=xml
+        PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
     
-    - name: Upload coverage
-      uses: codecov/codecov-action@v3
+    - name: Deploy infrastructure with Pulumi
+      uses: pulumi/actions@v4
       with:
-        file: ./coverage.xml
-        fail_ci_if_error: false
-
-  build:
-    needs: test
-    runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main'
-    
-    steps:
-    - uses: actions/checkout@v3
-    
-    - name: Configure AWS credentials
-      uses: aws-actions/configure-aws-credentials@v2
-      with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: us-east-1
-    
-    - name: Login to Amazon ECR
-      id: login-ecr
-      uses: aws-actions/amazon-ecr-login@v1
-    
-    - name: Build and push Docker image
+        command: up
+        stack-name: dev
+        work-dir: infra
       env:
-        ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-        ECR_REPOSITORY: fastapi-repo
-        IMAGE_TAG: ${{ github.sha }}
+        PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
+    
+    - name: Run database migrations
       run: |
-        docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
-        docker tag $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG $ECR_REGISTRY/$ECR_REPOSITORY:latest
-        docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-        docker push $ECR_REGISTRY/$ECR_REPOSITORY:latest
+        pip install alembic psycopg2-binary sqlalchemy
+        alembic upgrade head
+      env:
+        DATABASE_URL: ${{ secrets.DATABASE_URL }}
+    
+    - name: Deploy to EC2 via SSH
+      env:
+        EC2_HOST: ${{ secrets.EC2_HOST }}
+        EC2_USER: ec2-user
+        SSH_PRIVATE_KEY: ${{ secrets.EC2_SSH_KEY }}
+        DOCKER_IMAGE: ${{ secrets.DOCKERHUB_USERNAME }}/fastapi-app
+        DATABASE_URL: ${{ secrets.DATABASE_URL }}
+      run: |
+        echo "$SSH_PRIVATE_KEY" > private_key.pem
+        chmod 600 private_key.pem
+        ssh -o StrictHostKeyChecking=no -i private_key.pem $EC2_USER@$EC2_HOST << 'EOF'
+          docker pull ${{ secrets.DOCKERHUB_USERNAME }}/fastapi-app:latest
+          docker stop fastapi-app || true
+          docker rm fastapi-app || true
+          docker run -d --name fastapi-app --restart unless-stopped \
+            -p 80:8000 \
+            -e DATABASE_URL="${{ secrets.DATABASE_URL }}" \
+            ${{ secrets.DOCKERHUB_USERNAME }}/fastapi-app:latest
+          echo "Container started successfully!"
+          docker ps | grep fastapi-app
+        EOF
+        rm -f private_key.pem
+    
+    - name: Get deployment URL
+      run: |
+        cd infra
+        echo "Deployment Complete!"
+        echo "Application URL: $(pulumi stack output application_url)"
+      env:
+        PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
