--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,7 +10,6 @@ on:
 
 env:
   AWS_REGION: ap-southeast-1
-  ECR_REPOSITORY: fastapi-app-repo
 
 jobs:
   deploy:
@@ -21,28 +20,21 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v3
     
-    - name: Configure AWS credentials
-      uses: aws-actions/configure-aws-credentials@v2
+    - name: Login to Docker Hub
+      uses: docker/login-action@v3
       with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: ${{ env.AWS_REGION }}
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
     
-    - name: Login to Amazon ECR
-      id: login-ecr
-      uses: aws-actions/amazon-ecr-login@v1
-    
-    - name: Build, tag, and push image to Amazon ECR
-      id: build-image
+    - name: Build and push Docker image
       env:
-        ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+        DOCKER_IMAGE: ${{ secrets.DOCKERHUB_USERNAME }}/fastapi-app
         IMAGE_TAG: ${{ github.sha }}
       run: |
-        docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
-        docker tag $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG $ECR_REGISTRY/$ECR_REPOSITORY:latest
-        docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-        docker push $ECR_REGISTRY/$ECR_REPOSITORY:latest
-        echo "image=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
+        docker build -t $DOCKER_IMAGE:$IMAGE_TAG .
+        docker tag $DOCKER_IMAGE:$IMAGE_TAG $DOCKER_IMAGE:latest
+        docker push $DOCKER_IMAGE:$IMAGE_TAG
+        docker push $DOCKER_IMAGE:latest
     
     - name: Set up Python
       uses: actions/setup-python@v4
@@ -56,6 +48,16 @@ jobs:
       run: |
         cd infra
         pip install -r requirements.txt
+    
+    - name: Configure Pulumi stack
+      run: |
+        cd infra
+        pulumi login
+        pulumi stack select dev || pulumi stack init dev
+        pulumi config set docker_image ${{ secrets.DOCKERHUB_USERNAME }}/fastapi-app:latest
+        pulumi config set database_url ${{ secrets.DATABASE_URL }} --secret
+      env:
+        PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
     
     - name: Deploy infrastructure with Pulumi
       uses: pulumi/actions@v4
@@ -73,37 +75,33 @@ jobs:
       env:
         DATABASE_URL: ${{ secrets.DATABASE_URL }}
     
-    - name: Get EC2 instance ID
-      id: get-instance
-      run: |
-        cd infra
-        INSTANCE_ID=$(pulumi stack output instance_id)
-        echo "instance_id=$INSTANCE_ID" >> $GITHUB_OUTPUT
-    
-    - name: Restart application on EC2
+    - name: Deploy to EC2 via SSH
       env:
-        ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+        EC2_HOST: ${{ secrets.EC2_HOST }}
+        EC2_USER: ec2-user
+        SSH_PRIVATE_KEY: ${{ secrets.EC2_SSH_KEY }}
+        DOCKER_IMAGE: ${{ secrets.DOCKERHUB_USERNAME }}/fastapi-app
+        DATABASE_URL: ${{ secrets.DATABASE_URL }}
       run: |
-        INSTANCE_ID=${{ steps.get-instance.outputs.instance_id }}
-        
-        # Wait for instance to be ready
-        aws ec2 wait instance-status-ok --instance-ids $INSTANCE_ID --region ${{ env.AWS_REGION }}
-        
-        # Send command to pull latest image and restart container
-        aws ssm send-command \
-          --instance-ids $INSTANCE_ID \
-          --document-name "AWS-RunShellScript" \
-          --parameters 'commands=[
-            "aws ecr get-login-password --region ap-southeast-1 | docker login --username AWS --password-stdin $ECR_REGISTRY",
-            "docker pull $ECR_REGISTRY/$ECR_REPOSITORY:latest",
-            "docker stop fastapi-app || true",
-            "docker rm fastapi-app || true",
-            "docker run -d --name fastapi-app --restart unless-stopped -p 80:8000 -e DATABASE_URL=\"${{ secrets.DATABASE_URL }}\" $ECR_REGISTRY/$ECR_REPOSITORY:latest"
-          ]' \
-          --region ${{ env.AWS_REGION }}
+        echo "$SSH_PRIVATE_KEY" > private_key.pem
+        chmod 600 private_key.pem
+        ssh -o StrictHostKeyChecking=no -i private_key.pem $EC2_USER@$EC2_HOST << 'EOF'
+          docker pull ${{ secrets.DOCKERHUB_USERNAME }}/fastapi-app:latest
+          docker stop fastapi-app || true
+          docker rm fastapi-app || true
+          docker run -d --name fastapi-app --restart unless-stopped \
+            -p 80:8000 \
+            -e DATABASE_URL="${{ secrets.DATABASE_URL }}" \
+            ${{ secrets.DOCKERHUB_USERNAME }}/fastapi-app:latest
+          echo "Container started successfully!"
+          docker ps | grep fastapi-app
+        EOF
+        rm -f private_key.pem
     
     - name: Get deployment URL
       run: |
         cd infra
-        echo "Deployment Complete!"
+        echo "🚀 Deployment Complete!"
         echo "Application URL: $(pulumi stack output application_url)"
+      env:
+        PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
