--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,7 +6,7 @@ on:
     types:
       - completed
     branches: [main]
-  workflow_dispatch:
+  workflow_dispatch:  # Also allow manual trigger
 
 env:
   AWS_REGION: ap-southeast-1
@@ -36,49 +36,10 @@ jobs:
         docker push $DOCKER_IMAGE:$IMAGE_TAG
         docker push $DOCKER_IMAGE:latest
     
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.11'
-    
-    - name: Install Pulumi CLI
-      uses: pulumi/actions@v4
-    
-    - name: Install Pulumi dependencies
-      run: |
-        cd infra
-        pip install -r requirements.txt
-    
-    - name: Configure Pulumi stack
-      run: |
-        cd infra
-        pulumi login
-        pulumi stack select dev || pulumi stack init dev
-        pulumi config set docker_image ${{ secrets.DOCKERHUB_USERNAME }}/fastapi-app:latest
-        pulumi config set database_url ${{ secrets.DATABASE_URL }} --secret
-      env:
-        PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
-    
-    - name: Deploy infrastructure with Pulumi
-      uses: pulumi/actions@v4
-      with:
-        command: up
-        stack-name: dev
-        work-dir: infra
-      env:
-        PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
-    
-    - name: Run database migrations
-      run: |
-        pip install alembic psycopg2-binary sqlalchemy
-        alembic upgrade head
-      env:
-        DATABASE_URL: ${{ secrets.DATABASE_URL }}
-    
     - name: Deploy to EC2 via SSH
       env:
         EC2_HOST: ${{ secrets.EC2_HOST }}
-        EC2_USER: ec2-user
+        EC2_USER: ubuntu
         SSH_PRIVATE_KEY: ${{ secrets.EC2_SSH_KEY }}
         DOCKER_IMAGE: ${{ secrets.DOCKERHUB_USERNAME }}/fastapi-app
         DATABASE_URL: ${{ secrets.DATABASE_URL }}
@@ -98,10 +59,7 @@ jobs:
         EOF
         rm -f private_key.pem
     
-    - name: Get deployment URL
+    - name: Verify deployment
       run: |
-        cd infra
-        echo "🚀 Deployment Complete!"
-        echo "Application URL: $(pulumi stack output application_url)"
-      env:
-        PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
+        echo "Deployment complete!"
+        echo "Application URL: http://${{ secrets.EC2_HOST }}"
