--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,24 +1,72 @@
-name: Deploy to AWS EC2
+name: CI Pipeline
 
 on:
-  workflow_run:
-    workflows: ["CI Pipeline"]
-    types:
-      - completed
-    branches: [main]
-  workflow_dispatch:
-
-env:
-  AWS_REGION: ap-southeast-1
+  push:
+    branches: [ main, develop ]
+  pull_request:
+    branches: [ main ]
 
 jobs:
-  deploy:
+  test:
     runs-on: ubuntu-latest
-    if: ${{ github.event.workflow_run.conclusion == 'success' || github.event_name == 'workflow_dispatch' }}
+    
+    services:
+      postgres:
+        image: postgres:15
+        env:
+          POSTGRES_USER: user
+          POSTGRES_PASSWORD: pass
+          POSTGRES_DB: testdb
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+        ports:
+          - 5432:5432
     
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+    - uses: actions/checkout@v3
+    
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.11'
+    
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r app/requirements.txt
+        pip install pytest-cov black flake8
+    
+    - name: Lint with flake8
+      run: |
+        flake8 app --count --select=E9,F63,F7,F82 --show-source --statistics
+        flake8 app --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+    
+    - name: Format check with black
+      run: black --check app
+    
+    - name: Run tests
+      env:
+        DATABASE_URL: postgresql://user:pass@localhost:5432/testdb
+        PYTHONPATH: .
+      run: |
+        pytest app/test_main.py -v --cov=app --cov-report=xml
+    
+    - name: Upload coverage
+      uses: codecov/codecov-action@v3
+      with:
+        file: ./coverage.xml
+        fail_ci_if_error: false
+
+  build:
+    needs: test
+    runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/main'
+    
+    steps:
+    - uses: actions/checkout@v3
     
     - name: Login to Docker Hub
       uses: docker/login-action@v3
@@ -36,49 +84,10 @@ jobs:
         docker push $DOCKER_IMAGE:$IMAGE_TAG
         docker push $DOCKER_IMAGE:latest
     
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.11'
-    
-    - name: Install Pulumi CLI
-      uses: pulumi/actions@v4
-    
-    - name: Install Pulumi dependencies
-      run: |
-        cd infra
-        pip install -r requirements.txt
-    
-    - name: Configure Pulumi stack
-      run: |
-        cd infra
-        pulumi login
-        pulumi stack select dev || pulumi stack init dev
-        pulumi config set docker_image ${{ secrets.DOCKERHUB_USERNAME }}/fastapi-app:latest
-        pulumi config set database_url ${{ secrets.DATABASE_URL }} --secret
-      env:
-        PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
-    
-    - name: Deploy infrastructure with Pulumi
-      uses: pulumi/actions@v4
-      with:
-        command: up
-        stack-name: dev
-        work-dir: infra
-      env:
-        PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
-    
-    - name: Run database migrations
-      run: |
-        pip install alembic psycopg2-binary sqlalchemy
-        alembic upgrade head
-      env:
-        DATABASE_URL: ${{ secrets.DATABASE_URL }}
-    
-    - name: Deploy to EC2 via SSH
+    - name: Deploy to EC2
       env:
         EC2_HOST: ${{ secrets.EC2_HOST }}
-        EC2_USER: ec2-user
+        EC2_USER: ubuntu
         SSH_PRIVATE_KEY: ${{ secrets.EC2_SSH_KEY }}
         DOCKER_IMAGE: ${{ secrets.DOCKERHUB_USERNAME }}/fastapi-app
         DATABASE_URL: ${{ secrets.DATABASE_URL }}
@@ -93,15 +102,5 @@ jobs:
             -p 80:8000 \
             -e DATABASE_URL="${{ secrets.DATABASE_URL }}" \
             ${{ secrets.DOCKERHUB_USERNAME }}/fastapi-app:latest
-          echo "Container started successfully!"
-          docker ps | grep fastapi-app
         EOF
         rm -f private_key.pem
-    
-    - name: Get deployment URL
-      run: |
-        cd infra
-        echo "Deployment Complete!"
-        echo "Application URL: $(pulumi stack output application_url)"
-      env:
-        PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
